refactor: 코칭 및 자료 조회에서 카테고리 ID가 없어도 조회가 가능하도록 기능 구현